--- a/assets/styles.css
+++ b/assets/styles.css
@@ -124,3 +124,63 @@
     color: white;
     padding: 10px;
 }
+/*MEDIA QUERIES*/
+@media (max-width:576px){
+    .container{
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        grid-template-areas:
+    "navbar "
+    "header"
+    "core"
+    "foot";
+    }
+    :root{
+        --altura_navbar: 70px;
+    }
+    .navbar{
+        height: var(--altura_navbar);
+    }
+    .navbar{
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        position: relative;
+    }
+    .menu-toggler{
+        display: none;
+    }
+    .ul-links{
+        position: absolute;
+        top: var(--altura_header);
+        height: 0;
+        /*height: 100vh -var(--altura_header);*/
+        /*display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;*/
+        overflow: hidden;
+        font-size: 5px;
+    }
+    .toggler{
+        color: white;
+    }
+    .select-box{
+        padding: 10px;
+        padding-bottom: 15px;
+        width: 80%;
+    }
+    .header{
+        padding: 40px;
+    }
+    .h1{
+        padding-bottom: 15px;
+    }
+    .content{
+        grid-template-columns: 1fr;
+    }
+
+}
