--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,11 +57,14 @@
     font-size: 20px;
     gap: 70px;
     line-height: 50px;
-    transition: 0.5s ease-in-out;
+    transition-property: background-color, padding, color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-out;
 }
 .navbar a:hover{
     background-color: rgb(209, 209, 209);
     padding: 10px;
+    color:  rgb(255, 146, 202);
 }
 .menu-toggler{
     color: white;
@@ -108,6 +111,7 @@
 .card-button{
     margin-top: 10px;
     padding: 10px;
+    width: 70px;
     background-color: black;
     font-family: "Gupter", serif;
     font-size: 15px;
@@ -115,13 +119,14 @@
     color: white;
     border: 1px solid gray;
     cursor: pointer;
-    transition-property: background-color ;
-    transition-duration: 1.5s;
-    transition-timing-function: ease-in-out;
+    transition-property: border, color, width ;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-out;
 }
 .card-button:hover{
-    background-color: rgb(209, 209, 209);
     width: 100px;
+    border: 2px solid  rgb(255, 146, 202);
+    color:  rgb(255, 146, 202) ;
 }
 
 
@@ -136,7 +141,7 @@
     line-height: 30px;
 }
 .foot i{
-    color: white;
+    color:  rgb(255, 146, 202);
     padding: 10px;
 }
 /*MEDIA QUERIES*/
