--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,235 +1,242 @@
-*{
-    padding: 0px;
-    margin: 0px;
+* {
+  padding: 0px;
+  margin: 0px;
 }
 
-.container{
-    display: grid;
-    grid-template-columns: 15% 1fr;
-    grid-template-rows: 12%  1fr auto;
-    grid-template-areas:
+.container {
+  display: grid;
+  grid-template-columns: 15% 1fr;
+  grid-template-rows: 12% 1fr auto;
+  grid-template-areas:
     "navbar header"
     "navbar core"
     "foot core";
 }
 
 /*HEADER*/
-.header{
-    grid-area: header;
-    background-color: black;
-    font-family: "Playfair Display", serif;
-    color: white;
-    text-align: center;
-    padding: 20px;
-    padding-bottom: 30px;
+.header {
+  grid-area: header;
+  background-color: black;
+  font-family: "Playfair Display", serif;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  padding-bottom: 30px;
 }
-h1{
-    top: 35%;
-    left: 25%;
-    font-weight: 800;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    background: linear-gradient(90deg, #fc87cf, #ef68bb, #493d53, #b6e5f9, #a27dfe, #ff84f1);
-    background-size: 400%;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: animate 15s linear infinite;
+h1 {
+  top: 35%;
+  left: 25%;
+  font-weight: 800;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  background: linear-gradient(
+    90deg,
+    #fc87cf,
+    #ef68bb,
+    #493d53,
+    #b6e5f9,
+    #a27dfe,
+    #ff84f1
+  );
+  background-size: 400%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: animate 15s linear infinite;
 }
 
-@keyframes animate{
-    0%{
-        background-position: 0%;
-    }
-    100%{
-        background-position: 400%;
-    }
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
 }
 
-.select-box{
-    appearance: none;
-    margin-top: 10px;
-    padding: 10px;
-    width: 60%;
-    font-family: "Playfair Display", serif;
-    color: white;
-    font-size: 15px;
-    background-color: black;
-    cursor: pointer;
+.select-box {
+  appearance: none;
+  margin-top: 10px;
+  padding: 10px;
+  width: 60%;
+  font-family: "Playfair Display", serif;
+  color: white;
+  font-size: 15px;
+  background-color: black;
+  cursor: pointer;
 }
-.box-item{
-    font-size: 17px;
+.box-item {
+  font-size: 17px;
 }
 /*NAVBAR*/
-.navbar{
-    grid-area: navbar;
-    height: 100vh;
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    align-items: center;
-    font-family: "Playfair Display", serif;
+.navbar {
+  grid-area: navbar;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  font-family: "Playfair Display", serif;
 }
-.navbar img{
-    height: 180px;
-    width: 180px;
+.navbar img {
+  height: 180px;
+  width: 180px;
 }
 
-.navbar ul{
-    list-style: none;
-    text-align: center;
+.navbar ul {
+  list-style: none;
+  text-align: center;
 }
-.navbar a{
-    color: inherit; 
-    text-decoration: none; 
-    color: white;
-    font-size: 20px;
-    gap: 70px;
-    line-height: 50px;
-    transition-property: background-color, padding, color;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-out;
+.navbar a {
+  color: inherit;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  gap: 70px;
+  line-height: 50px;
+  transition-property: background-color, padding, color;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
 }
-.navbar a:hover{
-    background-color: rgb(209, 209, 209);
-    padding: 15px;
-    color:  rgb(255, 146, 202);
+.navbar a:hover {
+  background-color: rgb(209, 209, 209);
+  padding: 15px;
+  color: rgb(255, 146, 202);
 }
-.menu-toggler{
-    color: white;
-    display: none;
+.menu-toggler {
+  color: white;
+  display: none;
 }
 /*MAIN*/
-.core{
-    grid-area: core;
-    background-color: black;
+.core {
+  grid-area: core;
+  background-color: black;
 }
 
 /*CARDS*/
-.content{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(5fr);
-    height: 90vh;
-    overflow-y: scroll;
-    gap: 20px;
-    padding: 20px;
-    background-color: black;
+.content {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: repeat(5fr);
+  height: 90vh;
+  overflow-y: scroll;
+  gap: 2rem;
+  column-gap: 3rem;
+  padding: 20px;
+  background-color: black;
 }
-.card img{
-    width: 300px;
-    height: auto;
-    transform: scale(1);
-    transition: transform 1s ease-in-out;
-    cursor: pointer;
+.card img {
+  width: 300px;
+  height: auto;
+  transform: scale(1);
+  transition: transform 1s ease-in-out;
+  cursor: pointer;
 }
-.card img:hover{
-    transform: scale(1.2) translate(20px, 20px);
+.card img:hover {
+  transform: scale(1.2) translate(20px, 20px);
 }
-.card{
-    font-family: "Gupter", serif;
-    letter-spacing: 1px;
-    color: white;
-    font-size: 13px;
-    font-weight: 200;
-    text-align: center;
-    gap: 20px;
+.card {
+  font-family: "Gupter", serif;
+  letter-spacing: 1px;
+  color: white;
+  font-size: 13px;
+  font-weight: 200;
+  text-align: center;
+  gap: 20px;
 }
-.card h2{
-    margin-top: 10px;
+.card h2 {
+  margin-top: 10px;
 }
-.card-button{
-    margin-top: 10px;
-    padding: 10px;
-    width: 70px;
-    background-color: black;
-    font-family: "Gupter", serif;
-    font-size: 15px;
-    text-align: center;
-    color: white;
-    border: 1px solid gray;
-    cursor: pointer;
-    transition-property: border, color, width ;
-    transition-duration: 0.5s;
-    transition-timing-function: ease-out;
+.card-button {
+  margin-top: 10px;
+  padding: 10px;
+  width: 70px;
+  background-color: black;
+  font-family: "Gupter", serif;
+  font-size: 15px;
+  text-align: center;
+  color: white;
+  border: 1px solid gray;
+  cursor: pointer;
+  transition-property: border, color, width;
+  transition-duration: 0.5s;
+  transition-timing-function: ease-out;
 }
-.card-button:hover{
-    width: 100px;
-    border: 2px solid  rgb(255, 146, 202);
-    color:  rgb(255, 146, 202) ;
+.card-button:hover {
+  width: 100px;
+  border: 2px solid rgb(255, 146, 202);
+  color: rgb(255, 146, 202);
 }
-
 
 /*FOOTER*/
-.foot{
-    grid-area: foot;
-    background-color: black;
-    font-family: "Playfair Display", serif;
-    color: white;
-    text-align: center;
-    font-weight: 200;
-    line-height: 30px;
-    border: 1px solid  rgb(255, 146, 202);
-    padding: 20px;
+.foot {
+  grid-area: foot;
+  background-color: black;
+  font-family: "Playfair Display", serif;
+  color: white;
+  text-align: center;
+  font-weight: 200;
+  line-height: 30px;
+  border: 1px solid rgb(255, 146, 202);
+  padding: 20px;
 }
-.foot i{
-    color:  rgb(255, 146, 202);
-    padding: 10px;
+.foot i {
+  color: rgb(255, 146, 202);
+  padding: 10px;
 }
 /*MEDIA QUERIES*/
-@media (max-width:576px){
-    .container{
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        grid-template-areas:
-    "navbar "
-    "header"
-    "core"
-    "foot";
-    }
-    :root{
-        --altura_navbar: 70px;
-    }
-    .navbar{
-        height: var(--altura_navbar);
-    }
-    .navbar{
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
-        position: relative;
-        padding-top: 0;
-    }
-    .menu-toggler{
-        display: none;
-    }
-    .ul-links{
-        position: absolute;
-        top: var(--altura_header);
-        height: 0;
-        overflow: hidden;
-        font-size: 5px;
-    }
-    .toggler{
-        color: white;
-    }
-    .select-box{
-        padding: 10px;
-        padding-bottom: 15px;
-        width: 80%;
-    }
-    .header{
-        padding: 40px;
-    }
-    .h1{
-        padding-bottom: 15px;
-    }
-    .content{
-        grid-template-columns: 1fr;
-    }
-
+@media (max-width: 576px) {
+  .container {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "navbar "
+      "header"
+      "core"
+      "foot";
+  }
+  :root {
+    --altura_navbar: 70px;
+  }
+  .navbar {
+    height: var(--altura_navbar);
+  }
+  .navbar {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    padding-top: 0;
+  }
+  .menu-toggler {
+    display: none;
+  }
+  .ul-links {
+    position: absolute;
+    top: var(--altura_header);
+    height: 0;
+    overflow: hidden;
+    font-size: 5px;
+  }
+  .toggler {
+    color: white;
+  }
+  .select-box {
+    padding: 10px;
+    padding-bottom: 15px;
+    width: 80%;
+  }
+  .header {
+    padding: 40px;
+  }
+  .h1 {
+    padding-bottom: 15px;
+  }
+  .content {
+    grid-template-columns: 1fr;
+  }
 }
