--- a/assets/styles.css
+++ b/assets/styles.css
@@ -178,8 +178,10 @@ h1 {
   text-align: center;
   font-weight: 200;
   line-height: 30px;
-  border: 1px solid rgb(255, 146, 202);
   padding: 20px;
+}
+.contact{
+    color:  rgb(255, 146, 202);
 }
 .foot i {
   color: rgb(255, 146, 202);
